octsympy 3.0.0+
===============



octsympy 3.0.0 (2022-07-05)
===========================

  * New symbolic commands:

          cumprod
          cumsum
          ztrans

  * `dsolve` output prefers expressions (right-hand sides) rather than
    equations.  Also uses structs for systems.  This brings it closer
    to `solve` and more compatible with other symbolic toolboxes.

  * `dsolve` supports arrays of initial conditions.

  * Fixes for SymPy 1.6 and later.

  * Fixes for Octave 6.x and Octave 7.1.

  * Drop Python 2 support.

  * The `symbolic-win-py-bundle-x.y.z.zip` is no longer provided as we
    have not been able to port it to Python 3.

  * Update minimum versions of SymPy to 1.4 and Octave to 5.1.

  * Remove deprecated `evalpy` and `python_cmd` utilities.



octsympy 2.9.0 (2020-03-04)
===========================

  * Default python interpreter is now `python3`.

  * Fixes for SymPy 1.5.
      - `@sym/round` changed to round-to-even.
      - fix broken EmptySet `finiteset()`.

  * Documentation updates for upcoming Octave 6.

  * If the Pythonic package is loaded, automatically use it for Python
    communication (see `help sympref` for details).

  * Deprecation notice: `python_cmd` will be removed in a future release.



octsympy 2.8.0 (2019-04-30)
===========================

  * New symbolic commands:

          eval
          ezmesh
          find
          sinc

  * Update minimum versions of SymPy to 1.2 and Octave to 4.2.

  * Fixes for SymPy 1.4.

  * Newer SymPy versions improve QR and LU on non-square matrices.

  * Support for expressions with min and max such as `min(x, y)`.

  * `subs(f)` now works: it finds values from the workspace.

  * `gammainc` now regularized correctly.

  * `lambertw` has more consistent printing.

  * Other bug fixes and documentation updates.



octsympy 2.7.1 (2018-10-02)
===========================

  * Fixes for SymPy 1.3.

  * Various bug fixes and documentation updates.



octsympy 2.7.0 (2018-07-12)