@@ -1,6 +1,11 @@
 octsympy 3.0.0+
 ===============
 
+  * New `@double` numerical functions; these are wrappers around SymPy,
+    so they are slower than native floating-point implementations.
+
+          adjoint
+
 
 
 octsympy 3.0.0 (2022-07-05)
